[package]
name = "racetrack"
version = "0.1.0"
edition = "2021"

[dependencies]

leptos = { version = "*", features = ["csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.69", features = [
  "Window",
  "Document",
  "HtmlElement",
  "Text",
  "Geolocation",
  "Navigator",
] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
