[package]
name = "racetrack"
version = "0.1.0"
edition = "2021"

[dependencies]

bevy = "0.14.0"
console_error_panic_hook = "0.1.7"
console_log = "1"
futures-util = "*"
gloo-timers = { version = "*", features = ["futures"] }
gloo-worker = { version = "*" }
leptos = { version = "*", features = ["csr"] }
log = "0.4"
tokio = { version = "1.38", features = ["sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "*"
web-sys = { version = "0.3.69", features = [
  "Window",
  "Document",
  "HtmlElement",
  "Text",
  "Geolocation",
  "PositionOptions",
  "Navigator",
] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"
